# pagr

./: .env.example  .gitignore  ADD_COUNTRY.md  AGENT.md  API.md  BACKWARD_COMPATIBILITY_FIX.md  BOND_BREAKDOWN_TESTS_SUMMARY.md  BOND_IMPLEMENTATION_PLAN.md  BOND_PRICING_INVESTIGATION.md  CHART_DROPDOWN.md  CLAUDE.md  CLUADE.md  COUNTRY_DISPLAY_FIX.md  CREATE.md  CSV_FORMAT.md  CSV_VALIDATION_FIX.md  DB_INIT_BUG.md  ERROR_HANDLING.md  FDS_API_TIMEOUT_ANALYSIS.md  FIX_VERIFICATION.md  GRAPH_VIEW_FIX.md  HOLDINGS_MULTI.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MULTI_PORT.md  PROJECT_SPEC.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SCENARIO.md  SESSION_SUMMARY.md  TABULAR_VIEW.md  TRADE.md  TROUBLESHOOTING.md  VIEW.md  check_db.py  debug_multi_etl.py  debug_prices.py  default_portfolio.pagr  fixed_income_calculation_api-v3.json  (+13 more)
.claude/: settings.local.json
config/: config.yaml
data/: default_portfolio.csv  muti-asset_portfolio.csv  sample_portfolio.csv
src/pagr/: agent.py  app.py  app_old.py  cli.py  connection_tester.py  db.py  errors.py  etl_manager.py  market_data.py  portfolio.py  portfolio_analysis_service.py  portfolio_loader.py  portfolio_manager.py  session_manager.py  session_state.py
tests/: reproduce_nan.py  test_agent.py  test_basic.py  test_bond_enrichment.py  test_bond_portfolio_breakdowns.py  test_bond_queries.py  test_csv_column_normalization.py  test_csv_upload_simulation.py  test_db.py  test_error_handling.py  test_etl_error_handling.py  test_graph_data.py  test_graph_queries_bonds.py  test_market_value_column.py  test_memgraph_operations.py  test_mixed_portfolio_csv.py  test_phase2.py  test_portfolio_metrics.py  test_position_bond_validation.py  test_price_enrichment.py  test_streamlit_scenario.py  test_ui_bond_display.py
(+28 files in other folders)
