[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pagr"]
