[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "streamlit>=1.51.0",
    "streamlit-agraph>=0.0.45",
    "yfinance>=0.2.66",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.53",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pagr"]
